<resources>
    <string name="app_name">Capstone</string>
    <string name="title_activity_profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_profiles">Profiles</string>

    <string name="rate">$ %1.0f / hour</string>
    <string name="dashboard">My Profile</string>
    <string name="error_required_email">Email is required</string>
    <string name="error_invalid_email">Invalid Email Address</string>
    <string name="error_required_password">Password is required</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="profile_section_bio">Bio</string>
    <string name="profile_info_bio_demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu ante mi. Nunc efficitur blandit tellus in aliquam. Sed ultrices iaculis faucibus. Duis eleifend quis velit nec sagittis. Fusce gravida urna et dictum malesuada. Proin iaculis, arcu quis aliquam tincidunt, elit diam dapibus felis, nec aliquet magna magna sit amet eros. Nam ultrices ex ut metus fermentum, non consectetur turpis accumsan. Ut eu lobortis velit. Duis dui lectus, convallis id orci quis, convallis vestibulum augue. Nam eu dolor magna. Etiam et sodales lacus. Integer posuere id nisl a ullamcorper. Aliquam eget enim sed enim imperdiet eleifend. Vivamus sit amet lacus in augue gravida imperdiet. Quisque sit amet nulla purus.</string>
    <string name="profile_skills_title">Skills</string>
    <string name="profile_postcode_title">Postcode</string>
    <string name="profile_postcode_demo">SE4 1QB</string>
    <string name="profile_map_btn">See on map</string>
    <string name="mail_subject">Capstone - Request for session</string>
    <string name="profile_not_found">Profile was not found</string>
    <string name="profile_rate_title">Rate</string>
    <string name="welcome_message">Welcome. Choose an option in order to proceed</string>
    <string name="looking_for_a_trainer">Looking for a trainer?</string>
    <string name="register_as_a_trainer">Register as a trainer</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>

    <string name="content_authority">com.udacity.capstone</string>
    <string name="sync_account_type">capstone.gdm.ro</string>
    <string name="page_sync_key">page_sync</string>
    <string name="charge_rate">How much do you charge per hour?</string>
    <string name="register_profile_name">Name</string>
    <string name="register_profile_name_hint">Enter your name</string>
    <string name="register_profile_email">Email</string>
    <string name="register_profile_email_hint">Enter your email</string>
    <string name="register_profile_password">Password</string>
    <string name="register_profile_password_hint">Enter your password</string>
    <string name="create_your_free_account_btn">Create your free account</string>
    <string name="upload_image_instruction">Upload a picture of yourself</string>
    <string name="profile_image_error">Profile image is required</string>
    <string name="upload">Upload</string>
    <string name="profile_bio_inst">Describe yourself</string>
    <string name="register_profile_bio_hint">Tell us a bit about yourself</string>
    <string name="register_next_step_btn">Save</string>
    <string name="register_profile_skill_inst">What skills do you have?</string>
    <string name="profile_skills_hint">Tell us your skills and qualifications</string>
    <string name="register_profile_postcode_inst">Tell us your postcodeInfo so clients can see your profile on the map</string>
    <string name="register_profile_postcode_hint">Enter your Poscode</string>
    <string name="register_profile_completed_inst">Your profile is set up. Click the button below to see how it looks</string>
    <string name="register_profile_completed_btn">Go to my profile</string>
    <string name="widget_btn">Refresh</string>
</resources>
