<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login.LoginActivity">

    <include layout="@layout/app_bar" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="@dimen/login_input_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_first_input_mt"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="@dimen/login_input_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_input_mt"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/input_email"
        android:hint="@string/password_hint"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_password"
        android:background="@color/colorAccent"
        android:text="@string/login_button"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_input_mt"/>

    <TextView
        android:id="@+id/loginError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginBtn"
        tools:text="Error"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_input_mt"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/error_text_size"/>

</RelativeLayout>
