<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.profile.LoggedInProfileActivity"
    tools:showIn="@layout/app_bar_profile"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/bioCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="@dimen/cardview_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/profile_section_bio"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/profile_section_title" />

                <TextView
                    android:id="@+id/bioText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.3"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/profile_info_text_size"
                    tools:text="@string/profile_info_bio_demo" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/skillsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bioCard"
            android:layout_marginTop="@dimen/login_input_mt"
            app:contentPadding="@dimen/cardview_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/profile_skills_title"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/profile_section_title" />

                <TextView
                    android:id="@+id/skillsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.3"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/profile_info_text_size"
                    tools:text="@string/profile_info_bio_demo" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/postcodeCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skillsCard"
            android:layout_marginTop="@dimen/login_input_mt"
            app:contentPadding="@dimen/cardview_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/profile_postcode_title"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/profile_section_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/postcodeText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:lineSpacingMultiplier="1.3"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/profile_info_text_size"
                        tools:text="@string/profile_postcode_demo"
                        android:gravity="center_vertical"/>

                    <Button
                        android:id="@+id/seeOnMapBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_map_btn"
                        android:background="@color/colorAccent"
                        android:textColor="@android:color/white"
                        android:padding="@dimen/button_padding"/>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_below="@id/postcodeCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_input_mt"
            app:contentPadding="@dimen/cardview_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/profile_section_title"
                    android:text="@string/profile_rate_title"/>

                <TextView
                    android:id="@+id/rateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/profile_info_text_size"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>